changed tag in compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       DISPLAY:
       TF_FORCE_GPU_ALLOW_GROWTH: 'true'
-    image: lab7:curro
+    image: lab7:yourname
     # set user to your user id which is usually 1000:1000 to check you user id run `echo $(id -u):$(id -g)`
     user: 1000:1000
     volumes:
